--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="container">
-      <form class="add-toy-form" style="">
+      <form class="add-toy-form">
         <h3>Create a toy!</h3>
 
         <input type="text" name="name" value="" placeholder="Enter a toy's name..." class="input-text">
@@ -33,3 +33,4 @@
     <script type="text/javascript" src="src/index.js"></script>
   </body>
 </html>
+
